Fix bug with header and footer remaining visible all the time.

--- a/static/global.css
+++ b/static/global.css
@@ -22,20 +22,15 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    max-height: 100vh;
     margin: 0;
-    overflow-y: auto;
 }
 
 main{
     flex: 1;
-    overflow-y: auto;
 }
 
 html{
     margin: 0;
-    height: 100vh;
-    overflow: hidden;
 }
 
 
